# apiscribe

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: README.md
examples/: __init__.py
src/apiscribe/: __init__.py  __main__.py  main.py
src/apiscribe/cli/: __init__.py  __main__.py  main.py
src/apiscribe/core/: __init__.py  analyzer.py  collector.py  config.py  proxy.py
src/apiscribe/daemon/: control_api.py  daemon.py  server.py
src/apiscribe/generated_docs/: openapi.json
src/apiscribe/generator/: __init__.py  exporter.py  openapi.py
src/apiscribe/models/: __init__.py  endpoint.py  request.py  response.py
src/apiscribe/storage/: __init__.py  memory.py  session.py
src/apiscribe/ui/: api.js  app.js  index.html
src/apiscribe/utils/: __init__.py  path_cluster.py  path_inference.py  schema_merge.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_cluster_paths.py  test_collector.py  test_generator.py  test_memory.py  test_merge_schema.py  test_openapi.py  test_path_inference.py  test_proxy.py
